<resources>
    <string name="app_name">Mon Frigo</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_liste">Liste</string>
    <string name="ajouter">Ajouter</string>
    <string name="ajout_d_apos_un_aliment_dans_le_frigo">Ajout d&amp;apos;un aliment dans le frigo</string>
    <string name="title_activity_ajout">Ajout</string>
    <string name="ajouter_un_aliment">Ajouter un aliment</string>
    <string name="nameAliment">Nom de l\'aliment</string>
    <string name="recettes">Recettes</string>
    <string name="exit">Exit</string>
    <string name="reglages">Reglages</string>
    <string name="liste">Liste</string>
    <string name="mes_frigos">Mes Frigos</string>
    <string name="ajout">Ajout</string>
    <string name="ajouter_la_date_de_p_remption">Ajouter la date de péremption</string>
    <string name="quantit_">Quantité</string>
    <string name="type_du_produit_">Type du produit :</string>
    <string name="textview">TextView</string>
    <string name="title_activity_creer_frigo">CreerFrigo</string>
    <string name="new_frigo">Nouveau frigo</string>
    <string name="frigo">Frigo</string>
    <string name="autocompletion_ajout">Autocompletion</string>
    <string-array name="tableau">
        <item>Patates</item>
        <item>Bananes</item>
        <item>Tomates</item>
        <item>Riz</item>
        <item>Pâtes</item>
        <item>Coca-Cola</item>
        <item>Eau</item>
        <item>Haricots Verts</item>
        <item>Haricots Blancs</item>
        <item>Ketchup</item>
    </string-array>
</resources>