<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/versAjout"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="300dp"
        android:layout_marginTop="200dp"
        android:text="@string/ajouter" />

    <Button
        android:id="@+id/buttonMonFrigo"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_alignBaseline="@+id/versAjout"
        android:layout_alignBottom="@+id/versAjout"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/versAjout"
        android:text="@string/mes_frigos"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/buttonListe"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_alignLeft="@+id/versAjout"
        android:layout_below="@+id/versAjout"
        android:layout_marginTop="20dp"
        android:text="@string/liste" />

    <Button
        android:id="@+id/buttonRecettes"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_alignBaseline="@+id/buttonListe"
        android:layout_alignBottom="@+id/buttonListe"
        android:layout_alignLeft="@+id/buttonMonFrigo"
        android:text="@string/recettes" />

    <Button
        android:id="@+id/buttonReglages"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_alignRight="@+id/buttonListe"
        android:layout_below="@+id/buttonListe"
        android:layout_marginTop="20dp"
        android:text="@string/reglages" />

    <Button
        android:id="@+id/buttonExit"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_alignBaseline="@+id/buttonReglages"
        android:layout_alignBottom="@+id/buttonReglages"
        android:layout_alignLeft="@+id/buttonRecettes"
        android:text="@string/exit" />

</RelativeLayout>
